--- a/module/index.html
+++ b/module/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <p id="box">aaaaaaaaaaaaaa</p>
+    <p id="box2">bbbbbbbbbbb</p>
 </body>
+
 </html>
+<script data-main="./main" src="./public/require.js"></script>
+<script>
+    require([
+        './js/amdJsWithDe',
+        './js/amdJS',
+        "./js/jquery.min",
+    ], function (
+        amdJsWithDe,
+        amdJs,
+        jquery,
+    ) {
+        amdJsWithDe.hi();
+        amdJs.go()
+        console.log($)
+
+        $('#box').click(function () {
+            console.log('aaaa')
+        })
+
+    });
+</script>
